third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/default_and_catch_all_same_variant.stderr
error: Attribute `default` is mutually exclusive with `catch_all`
 --> tests/try_build/compile_fail/default_and_catch_all_same_variant.rs:6:5
  |
6 |     #[default]
  |     ^^^^^^^^^^
